--- a/source/scss/general/_blocks.scss
+++ b/source/scss/general/_blocks.scss
@@ -1,5 +1,6 @@
 @import "blocks/header.scss";
 @import "blocks/footer.scss";
+@import "blocks/overlay.scss";
 
 @import "blocks/index-first.scss";
 @import "blocks/index-offer.scss";
