--- a/source/scss/blocks/_footer.scss
+++ b/source/scss/blocks/_footer.scss
@@ -2,7 +2,10 @@
     padding-top: 77px;
     display: grid;
     grid-template-columns: repeat(4, 1fr);
-    &-contact {
+    @include mobile {
+        padding-top: 40px;    
+    }
+    &-contact { 
         position: relative;
         top: -20px;
         display: flex;
@@ -74,6 +77,7 @@
             grid-column: span 2;
             align-items: center;
             justify-content: center;
+            grid-gap: 5px;
         }
         &__item {
             font-family: var(--font-family);
@@ -137,6 +141,10 @@
             grid-column: span 4;
             order: 2;
         }
+        @include mobile {
+            padding-top: 15px;
+            grid-gap: 10px;
+        }
     }
     &-copyright {
         font-family: var(--font-family4);
@@ -155,6 +163,10 @@
             padding: 60px 10px 10px; 
             order: 4;
         }
+        @include mobile {
+            padding: 20px 10px 10px; 
+            order: 4;
+        }
         &::after {
             position: absolute;
             content: '';
@@ -163,6 +175,9 @@
             top: 50px;
             left: 0;
             width: 100%;
+            @include mobile {
+                top: 15px;
+            }
         }
     }
 }
