--- a/source/scss/blocks/_header.scss
+++ b/source/scss/blocks/_header.scss
@@ -10,12 +10,12 @@ header {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 50px;
+    padding: 50px 0px;
     @include tablet {
         display: grid;
         grid-template-columns: 30% 40% 30%;
         justify-content: space-around;
-        padding: 20px;
+        padding: 20px 5px;
     }
     @include mobile {
         grid-template-columns: 30% 40% 30%;
@@ -94,17 +94,18 @@ header {
         }
         &__look {
             position: relative;
-            width: clamp(30px, 4.298vw, 49px);
-            height: clamp(30px, 4.298vw, 49px);
+            width: 49px;
+            height: 49px;
             background-image: url("data:image/svg+xml,%3Csvg width='22' height='22' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cg opacity='.7' stroke='%23fff' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'%3E%3Cpath d='M18.8 9.9A8.9 8.9 0 1 1 1 9.9a8.9 8.9 0 0 1 17.8 0ZM21 21l-4.8-4.8'/%3E%3C/g%3E%3C/svg%3E");
             background-repeat: no-repeat;
             background-position: center center;
             background-size: auto;
             transition: all 0.5s;
             @include mobile {
+                width: 35px;
+                height: 35px;
                 background-position: center center;
                 background-size: 35%;
-                
             }
             &::before {
                 position: absolute;
@@ -137,16 +138,10 @@ header {
 
             @include mobile {
                 background-position: center center;
-                background-size: 75%;
+                background-size: 85%;
             }
             &:hover {
                 transform: scale(1.04);
-                @include mobile {
-                    transform: scale(0.6);
-                }
-            }
-            @include mobile {
-                transform: scale(0.6);
             }
         }
     }
