--- a/source/scss/blocks/_index-gallery.scss
+++ b/source/scss/blocks/_index-gallery.scss
@@ -1,7 +1,15 @@
 .index-gallery {
     padding-top: 140px;
-    @include mobile {
+    &__box {
+        display: flex;
+        flex-direction: column;
+        grid-gap: 30px;
+    }
+    @include tablet {
         padding-top: 50px;
+    }
+    @include mobile {
+        padding-top: 30px;
     }
 }
 .gallery-pictures {
@@ -10,10 +18,12 @@
     align-items: center;
     justify-content: center;
     grid-gap: 30px;
-    padding-top: 60px;
+    @include laptop {
+        padding: 0 15px;
+        grid-gap: 20px;
+    }
     @include mobile {
-        padding: 20px;
-        grid-gap: 2px;
+        grid-gap: 5px;
     }
 
 
@@ -42,31 +52,24 @@
     color: var(--color-d);
 
     text-align: center;
-    margin-top: 75px;
-    padding: 15px;
+    padding: 25px 0;
     transition: all .4s;
-    @include mobile {
-        margin-top: 10px;
-        padding: 1px;
-    }
 
     &::after {
         position: absolute;
-        top: -15px;
+        top: 0px;
         content: '';
-        width: 40%;
+        width: 400%;
         height: 1px;
         border: 1px solid var(--color-b);
     }
     &::before {
         position: absolute;
-        bottom: -15px;
+        bottom: 0px;
         content: '';
-        width: 40%;
+        width: 400%;
         height: 1px;
         border: 1px solid var(--color-b);
     }
-
-
 }
 
