--- a/source/scss/blocks/_index-update.scss
+++ b/source/scss/blocks/_index-update.scss
@@ -1,15 +1,18 @@
 .update-section {
     margin: 100px 0;
-    @include mobile {
+    @include tablet {
         margin: 50px 0;
+    }
+    @include mobile {
+        margin: 30px 0;
     }
 }
 
 .slideBox {
     display: flex;
     flex-direction: column;
-    height: 536px;
-    width: 362px;
+    max-height: 536px;
+    max-width: 362px;
     background: #FFFFFF;
     border-radius: 20px;
     box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.2);
@@ -34,22 +37,34 @@
             font-weight: 600;
             font-size: clamp(20px, 2.807vw, 32px);
             line-height: 130%;
-            color: #000000;
+            color: var(--color-b);
         }
 
         &__about {
             font-weight: 400;
             font-size: clamp(14px, 1.404vw, 16px);
             line-height: 160%;
-            color: #000000;
+            color: var(--color-b);
             opacity: 0.7;
         }
 
         &__more {
+            display: flex;
+            grid-gap: 10px;
             font-weight: 600;
             font-size: clamp(14px, 1.404vw, 16px);
             line-height: 160%;
-            color: #FF4B32;
+            color: var(--color-d);
+        }
+        &__arrow {
+            width: 14px;
+            height: 10px;
+            background-image: url(/img/sprite/top-right.svg);
+            background-position: 100% 100%;
+            background-repeat: no-repeat;
+            transform: translateY(100%);
+            
+
         }
     }
 }
@@ -65,7 +80,7 @@
 .update-swap{
     padding-top: 60px;
     @include mobile {
-        padding-top: 30px;
+        padding-top: 15px;
     }
 }
 .update-wrapper {
@@ -84,6 +99,10 @@
     border-radius: 20px;
 
     transition: all .4s;
+
+    @include mobile {
+        justify-content: center;
+    }
 
     &:hover {
         transform: scale(1.01);
@@ -106,6 +125,6 @@
         background-color: #000000;
     }
     .swiper-pagination-bullet-active {
-        background-color: #ff0000;
+        background-color: var(--color-i);
     }
 }
