adaptive bug fix

--- a/source/partials/header.html
+++ b/source/partials/header.html
@@ -27,9 +27,12 @@
         </div>
         <div class="mobile-menu">
             <div class="logo">
-                <a class="header-logo" href="#"><svg width='130' height='50'>
-                        <use href='img/sprite/sprite.svg#coffee'></use>
-                    </svg></a>
+                <a class="header-logo" href="#">
+                    <picture>
+                        <source type='image/webp' srcset='img/sectionF/logo.webp'>
+                        <img width='100' height='100' src='img/sectionF/logo.png' alt='image'>
+                      </picture>
+                </a>
             </div>
             <nav class="header-nav">
                 <ul class="header-nav__list">
