--- a/source/scss/blocks/_header.scss
+++ b/source/scss/blocks/_header.scss
@@ -15,26 +15,20 @@ header {
         display: grid;
         grid-template-columns: 30% 40% 30%;
         justify-content: space-around;
-        padding: 20px 5px;
+        padding: 20px 20px;
     }
     @include mobile {
-        grid-template-columns: 30% 40% 30%;
         padding: 5px;
     }
     &-logo {
         order: 1;
+        display: flex;
+        justify-content: center;
         @include tablet {
             display: flex;
             align-items: center;
             justify-content: center;
         }
-        @include mobile {
-            justify-content: flex-end;
-        }
-    }
-    &-logo {
-        display: flex;
-        justify-content: center;
     }
     &-nav {
         @include tablet {
@@ -50,7 +44,7 @@ header {
             width: fit-content;
         }
         &__link {
-            font-family: 'Open Sans';
+            font-family: var(--font-family);
             font-style: normal;
             font-weight: 700;
             font-size: clamp(14px, 1.579vw, 18px);
@@ -59,7 +53,7 @@ header {
             opacity: 0.6;
             transition: all;
             &.active {
-                font-family: 'Open Sans';
+                font-family: var(--font-family);
                 font-style: normal;
                 font-weight: 400;
                 font-size: clamp(14px, 1.579vw, 18px);
@@ -152,8 +146,9 @@ header {
         display: flex;
         flex-direction: column;
         justify-content: space-between;
+        opacity: 1;
         @include for-tablet {
-            display: none;
+            opacity: 0;
         }
         @include tablet {
             order: -1;
@@ -171,9 +166,8 @@ header {
         }
         &.active {
             @include tablet {
-                position: absolute;
-                top: 15px;
-                right: 15px;
+                top: 0px;
+                right: -10px;
                 z-index: 200;
             }
             span {
