--- a/source/scss/blocks/_index-update.scss
+++ b/source/scss/blocks/_index-update.scss
@@ -13,9 +13,9 @@
     flex-direction: column;
     max-height: 536px;
     max-width: 362px;
-    background: #FFFFFF;
+    background: var(--color-a);
     border-radius: 20px;
-    box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.2);
+    box-shadow: 5px 5px 15px var(--color-j);
     @include mobile {
         height: 400px;
         width: 300px;
@@ -34,6 +34,7 @@
         }
 
         &__title {
+            font-family: var(--font-family2);
             font-weight: 600;
             font-size: clamp(20px, 2.807vw, 32px);
             line-height: 130%;
@@ -41,6 +42,7 @@
         }
 
         &__about {
+            font-family: var(--font-family);
             font-weight: 400;
             font-size: clamp(14px, 1.404vw, 16px);
             line-height: 160%;
@@ -51,6 +53,7 @@
         &__more {
             display: flex;
             grid-gap: 10px;
+            font-family: var(--font-family);
             font-weight: 600;
             font-size: clamp(14px, 1.404vw, 16px);
             line-height: 160%;
@@ -60,11 +63,9 @@
             width: 14px;
             height: 10px;
             background-image: url(/img/sprite/top-right.svg);
-            background-position: 100% 100%;
+            background-position: center;
             background-repeat: no-repeat;
-            transform: translateY(100%);
-            
-
+            transform: translateY(70%);
         }
     }
 }
@@ -122,7 +123,7 @@
         width: 10px;
         height: 10px;
         border-radius: 50px;
-        background-color: #000000;
+        background-color: var(--color-b);
     }
     .swiper-pagination-bullet-active {
         background-color: var(--color-i);
