--- a/source/scss/blocks/_index-gallery.scss
+++ b/source/scss/blocks/_index-gallery.scss
@@ -13,26 +13,21 @@
     }
 }
 .gallery-pictures {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: center;
-    grid-gap: 30px;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-gap: clamp(1px, 2.083vw, 30px);
     @include laptop {
         padding: 0 15px;
-        grid-gap: 20px;
     }
-    @include mobile {
-        grid-gap: 5px;
-    }
-
 
     &-item {
-        display: flex;
-        flex-direction: column;
-        grid-gap: 30px;
-        @include mobile {
-            grid-gap: 2px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    grid-gap: clamp(1px, 2.083vw, 30px);
+        &:nth-child(even){
+            flex-direction: column-reverse;
         }
     }
 }
@@ -47,7 +42,7 @@
     font-family: var(--font-family);
     font-style: normal;
     font-weight: 400;
-    font-size: clamp(14px, 1.579vw, 18px);
+    font-size: clamp(14px, 1.25vw, 18px);
     line-height: 150%;
     color: var(--color-d);
 
