--- a/source/scss/blocks/_footer.scss
+++ b/source/scss/blocks/_footer.scss
@@ -1,183 +1,181 @@
 .footer {
-    padding-top: 77px;
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    @include mobile {
-        padding-top: 40px;    
-    }
-    &-contact { 
-        position: relative;
-        top: -20px;
-        display: flex;
-        flex-direction: column;
-        span {
-            padding-right: 25px;
-        }
+    &-top {
+        padding: 77px 0 75px;
+        display: grid;
+        grid-template-columns: repeat(4, 1fr);
+
         @include tablet {
-            grid-column: span 2;
-            order: 2;
-            padding-left: 15px;
-            grid-gap: 10px;
-            order: 1;
-            top: -30px;
+            padding: 50px 0 40px;
         }
         @include mobile {
-            grid-column: span 4;
-            align-items: center;
-            grid-gap: 5px;
+            padding: 40px 0 30px;
         }
-        &__item {
-            font-family: var(--font-family);
-            font-style: normal;
-            font-weight: 400;
-            font-size: clamp(14px, 1.579vw, 18px);
-            line-height: 160%;
-            color: var(--color-a);
-            @include mobile {
-                text-align: center;
-            }
 
-        }
-        &__telephone {
+        &__contact {
+            position: relative;
+            top: -20px;
             display: flex;
-            flex-direction: row;
-            align-items: center;
-            grid-gap: 15px;
-            font-family: var(--font-family);
-            font-style: normal;
-            font-weight: 400;
-            font-size: clamp(14px, 1.579vw, 18px);
-            line-height: 150%;
-            text-align: center;
-            color: var(--color-a);
-            transition: all .4s;
+            flex-direction: column;
+            grid-gap: 25px;
+
+            span {
+                padding-right: 25px;
+            }
+
+            @include tablet {
+                grid-column: span 2;
+                justify-content: center;
+                align-items: center;
+                padding-left: 15px;
+                grid-gap: 30px;
+                order: 1;
+                top: -30px;
+            }
+
+            @include mobile {
+                order: 0;
+                grid-column: span 4;
+                align-items: center;
+                grid-gap: 5px;
+            }
+
+            &-item {
+                font-family: var(--font-family);
+                font-style: normal;
+                font-weight: 400;
+                font-size: clamp(14px, 1.25vw, 18px);
+                line-height: 160%;
+                color: var(--color-a);
+
+                @include mobile {
+                    text-align: center;
+                }
+
+            }
+
+            &-telephone {
+                display: flex;
+                flex-direction: row;
+                align-items: center;
+                grid-gap: 15px;
+                font-family: var(--font-family);
+                font-style: normal;
+                font-weight: 400;
+                font-size: clamp(14px, 1.25vw, 18px);
+                line-height: 150%;
+                text-align: center;
+                color: var(--color-a);
+                transition: all .4s;
+
+                &:hover {
+                    opacity: 0.8;
+                }
+            }
+        }
+
+        &__categories {
+            display: flex;
+            flex-direction: column;
+            grid-gap: 20px;
+            @include tablet {
+                order: 2;
+            }
+            @include mobile {
+                grid-column: span 2;
+                align-items: center;
+                justify-content: center;
+            }
+            &-text {
+                font-family: var(--font-family);
+                font-style: normal;
+                font-weight: 400;
+                font-size: clamp(18px, 1.667vw, 24px);
+                line-height: 150%;
+            }
+
+            &-list {
+                display: flex;
+                flex-direction: column;
+                grid-gap: 20px;
+            }
+            &-item {
+                font-family: var(--font-family);
+                font-style: normal;
+                font-weight: 400;
+                font-size: clamp(14px, 1.25vw, 18px);
+                line-height: 150%;
+                &:hover {
+                    opacity: .8;
+                }
+            }
+        }
+
+        
     
-            &:hover {
-                opacity: 0.8;
-            }
-        }    
-    }
-    &-categories {
-        display: flex;
-        flex-direction: column;
-        grid-gap: 20px;
 
-        font-family: var(--font-family);
-        font-style: normal;
-        font-weight: 400;
-        font-size: clamp(14px, 2.105vw, 24px);
-        line-height: 150%;
-        color: var(--color-a);
+        &__follow {
+            display: flex;
+            flex-direction: column;
+            grid-gap: 45px;
 
-        @include tablet {
-            order: 1;
-            grid-gap: 10px;
-        }
-        @include mobile {
-            grid-column: span 2;
-            align-items: center;
-            justify-content: center;
-            grid-gap: 5px;
-        }
-        &__item {
             font-family: var(--font-family);
             font-style: normal;
             font-weight: 400;
-            font-size: clamp(14px, 1.579vw, 18px);
-            line-height: 150%;
-            color: var(--color-a);
-            &:hover {
-                opacity: 0.8;
-            }
-        }
-    }
-    &-information {
-        display: flex;
-        flex-direction: column;
-        grid-gap: 20px;
-
-        font-family: var(--font-family);
-        font-style: normal;
-        font-weight: 400;
-        font-size: clamp(14px, 2.105vw, 24px);
-        line-height: 150%;
-        color: var(--color-a);
-        @include tablet {
-            grid-gap: 10px;
-        }
-        @include mobile {
-            grid-column: span 2;
-            align-items: center;
-            justify-content: center;
-        }
-        &__item {
-            font-family: var(--font-family);
-            font-style: normal;
-            font-weight: 400;
-            font-size: clamp(14px, 1.579vw, 18px);
+            font-size: clamp(18px, 1.667vw, 24px);
             line-height: 150%;
             color: var(--color-a);
 
-            &:hover {
-                opacity: 0.8;
+            @include tablet {
+                align-items: center;
+                padding-top: 25px;
+                grid-gap: 15px;
+                grid-column: span 4;
+                order: 2;
+            }
+
+            @include mobile {
+                padding-top: 15px;
+                grid-gap: 10px;
             }
         }
     }
-    &-follow {
-        display: flex;
-        flex-direction: column;
-        grid-gap: 45px;
 
-        font-family: var(--font-family);
-        font-style: normal;
-        font-weight: 400;
-        font-size: clamp(18px, 2.105vw, 24px);
-        line-height: 150%;
-        color: var(--color-a);
-        @include tablet {
-            align-items: center;
-            padding-top: 25px;
-            grid-gap: 15px;
-            grid-column: span 4;
-            order: 2;
-        }
-        @include mobile {
-            padding-top: 15px;
-            grid-gap: 10px;
-        }
-    }
-    &-copyright {
-        font-family: var(--font-family4);
-        font-style: normal;
-        font-weight: 400;
-        font-size: clamp(14px, 1.404vw, 16px);;
-        line-height: 160%;
-        text-align: center;
-        color: var(--color-a);
-
+    &-bottom {
         position: relative;
-        grid-column: span 4;
-        padding: 76px 0 50px;
-
-        @include tablet {
-            padding: 60px 10px 10px; 
-            order: 4;
-        }
-        @include mobile {
-            padding: 20px 10px 10px; 
-            order: 4;
-        }
+        text-align: center;
+        padding: 30px 0 40px;
         &::after {
             position: absolute;
             content: '';
             opacity: 0.4;
             border: 1px solid var(--color-a);
-            top: 50px;
+            top: 0px;
             left: 0;
             width: 100%;
+    
             @include mobile {
-                top: 15px;
+                top: 0px;
             }
+        }
+        @include tablet {
+            padding: 30px 0 40px;
+        }
+    
+        @include mobile {
+            padding: 15px 0 20px;
+        }
+        &__copyright {
+            font-family: var(--font-family4);
+            font-style: normal;
+            font-weight: 400;
+            font-size: clamp(14px, 1.111vw, 16px);
+
+            line-height: 160%;
+            color: var(--color-a);
+
+        
+
         }
     }
 }
+
