--- a/source/scss/blocks/_index-update.scss
+++ b/source/scss/blocks/_index-update.scss
@@ -6,6 +6,11 @@
     @include mobile {
         margin: 30px 0;
     }
+    &__box {
+        display: flex;
+        flex-direction: column;
+        grid-gap: 60px;
+    }
 }
 
 .slideBox {
@@ -36,7 +41,7 @@
         &__title {
             font-family: var(--font-family2);
             font-weight: 600;
-            font-size: clamp(20px, 2.807vw, 32px);
+            font-size: clamp(20px, 2.222vw, 32px);
             line-height: 130%;
             color: var(--color-b);
         }
@@ -44,7 +49,7 @@
         &__about {
             font-family: var(--font-family);
             font-weight: 400;
-            font-size: clamp(14px, 1.404vw, 16px);
+            font-size: clamp(14px, 1.111vw, 16px);
             line-height: 160%;
             color: var(--color-b);
             opacity: 0.7;
@@ -55,7 +60,7 @@
             grid-gap: 10px;
             font-family: var(--font-family);
             font-weight: 600;
-            font-size: clamp(14px, 1.404vw, 16px);
+            font-size: clamp(14px, 1.111vw, 16px);
             line-height: 160%;
             color: var(--color-d);
         }
@@ -78,12 +83,6 @@
     width: 100%;
 }
 
-.update-swap{
-    padding-top: 60px;
-    @include mobile {
-        padding-top: 15px;
-    }
-}
 .update-wrapper {
     width: 100%;
     width: 1140px;
