--- a/source/scss/components/_coffee-card.scss
+++ b/source/scss/components/_coffee-card.scss
@@ -45,7 +45,7 @@
         font-family: var(--font-family);
         font-style: normal;
         font-weight: 700;
-        font-size: clamp(14px, 1.404vw, 16px);
+        font-size: clamp(14px, 16px, 16px);
         line-height: 160%;
         color: var(--color-b);
         opacity: 0.6;
